- Add support for optional responses directly from server - Server now randomly picks optional response versus client side - Fixed dashboard to use correct properties from /status service - Cleaned up intent responses (UI) - WIP - Fixing responsive views on small screens

--- a/web/src/assets/css/style.css
+++ b/web/src/assets/css/style.css
@@ -2,6 +2,11 @@
   background-image: url("../img/logo.png");
 }
 
+.sidebar-toggler {
+  left: inherit !important;
+  right: 0px;
+}
+
 .aside-menu {
     width: 350px;
 }
@@ -53,3 +58,11 @@ tags-input .tags .tag-item .remove-button {
 }
 .list-group-item:hover, a.list-group-item:focus {text-decoration: none;background-color: rgb(245, 245, 245);}
 .list-group { margin-bottom:0px; }
+
+@media (max-width: 991px) {
+  .sidebar-hidden .sidebar {
+      margin-left: -200px;
+  }
+
+  
+}
